<?xml version="1.0"?>
<package format="2">
  <name>worlds_objects</name>
  <version>0.0.0</version>
  <description>The navigation_resources package</description>
  <maintainer email="ronaldsonbellande@gmail.com">ronaldsonbellande</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
